# ose-sheet

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
backend/: .env.example  .gitignore  PHASE1_TEST_RESULTS.md  PHASE2_IMPLEMENTATION.md  PHASE2_TEST_RESULTS.md  PHASE3A_IMPLEMENTATION.md  README.md  alembic.ini  migrate_special_attacks_to_metadata.py  pyproject.toml  requirements.txt  seed_admin_user.py  seed_default_character_classes.py  seed_default_items.py  seed_default_spells.py  seed_mercenary_specialist_types.py  seed_test_user.py  seed_treasure_types.py  seed_vehicle_types.py  test_phase1.py  test_phase2.py  test_phase3a_quick.sh  update_default_spells.py  update_special_attacks.py  verify_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_01_0000-0000000000000_initial_schema.py  2026_02_08_2242-5f8536ac7a58_add_admin_role_and_spell_defaults.py  2026_02_10_2218-495d5a9b4f85_add_reversible_to_spells.py  2026_02_11_2235-a6753e249563_refactor_spells_remove_campaign_id_add_.py  2026_02_15_1711-3b7adfebda06_add_character_memorized_spells.py  2026_02_16_1114-67a6b6276b35_add_movement_rate_to_characters.py  2026_02_17_1917-7b3882b43b71_add_weight_cost_equippable_to_items.py  2026_02_17_1950-9fb7e437a9ef_add_slot_to_character_items.py  2026_02_21_2324-8094fff4c4e7_add_campaign_stash_table.py  2026_02_22_1951-4779e9511b76_add_item_secrets_column.py  2026_02_22_2100-add_item_identification.py  2026_03_03_add_retainer_fields.py  (+22 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/data/: ose_sheets.db.backup_pre_surrogate
(+178 files in other folders)
